--- a/Web code/app/globals.css
+++ b/Web code/app/globals.css
@@ -11,3 +11,12 @@ body,
 .leaflet-top{
     z-index:0 !important;
 }
+
+.rdMonth {
+    width: 100% !important;
+}
+
+.rdrCalendarWrapper {
+    font-size: 16xp !important;
+    width: 100% !important;
+}
