--- a/Web_code/app/globals.css
+++ b/Web_code/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import 'keen-slider/keen-slider.min.css';
 
 /* تثبيت مشكلة z-index لـ Leaflet */
 .leaflet-bottom,
@@ -87,4 +88,17 @@
   height: 24px !important;
   line-height: 24px !important;
   box-shadow: none !important;
+}
+.swiper-button-next:after, 
+.swiper-button-prev:after {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.swiper-button-prev {
+  left: 0 !important;
+}
+
+.swiper-button-next {
+  left: 30px !important; /* 40px button width + 12px gap */
 }
